--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+server.port=8098
+okta.oauth2.issuer=https://dev-81334184.okta.com/oauth2/default
+okta.oauth2.client-id=0oa945oabeOzWA2wz5d7
+okta.oauth2.client-secret=aTuug12IIywhb5uzGFTVxNlKqUywdnxpGlfBr2yH
+okta.oauth2.redirect-uri=/authorization-code/callback
